# pycounts

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  example.ipynb
