[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Count words in text files"
authors = ["Taren Sanders"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
